--- a/app/views/lots/files.hbs
+++ b/app/views/lots/files.hbs
@@ -13,8 +13,26 @@
 <div class="row mt-4">
     {{#each files }}
         <div class="col-2 mb-2">
-            <img src="{{ ../imagesURL }}/{{ ../lot.stock_id }}/{{ this }}" class="img-item" 
-                data-bs-toggle="modal" data-bs-target="#modal-img" />
+            <div class="card p-2">
+                <img src="{{ ../imagesURL }}/{{ ../lot.stock_id }}/{{ this }}" class="img-item" 
+                    data-bs-toggle="modal" data-bs-target="#modal-img" />
+                <div class="card-footer text-center">
+                    {{#if (equals ../lot.image this) }}
+                        <i class="bi bi-check-circle-fill text-success"></i>
+                    {{else}}
+                        <a href="#" title="Set as default" class="text-decoration-none btn-set-default"
+                            data-bs-toggle="modal" data-bs-target="#modalSetImageDefault" 
+                            data-img-name="{{ this }}" 
+                            data-img-src="{{ ../imagesURL }}/{{ ../lot.stock_id }}/{{ this }}"
+                            data-lot-id="{{ ../lot.id }}">
+                            <i class="bi bi-check-circle-fill text-muted"></i>
+                        </a>
+                    {{/if}}
+                    <a href="#" title="Remove" class="text-decoration-none">
+                        <i class="bi bi-trash3-fill text-danger"></i>
+                    </a>    
+                </div>    
+            </div>        
         </div>
     {{/each }}
 </div>
@@ -32,10 +50,51 @@
         </div>
     </div>
 </div>
+
+<div class="modal" id="modalSetImageDefault">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form action="/lots/files/set-default" method="POST" id="form-set-image-default">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <img src="" alt="Set image as default" id="img-selected-default" class="card-img-top">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="fw-bold">Set this image as default?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <button type="button" class="btn btn-sm btn-danger" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="submit" id="button-submit" class="btn btn-sm btn-primary">
+                        <i class="bi bi-save2"></i> Save
+                    </button>
+                </div>
+                <input type="hidden" id="fileName" name="fileName" value="" />
+                <input type="hidden" id="lotId" name="id" value="" />
+            </form>
+        </div>
+    </div>
+</div>
+
+
 <script>
     const imgs = document.querySelectorAll('.img-item');
     [...imgs].forEach(el => el.addEventListener('click', (ev) => {
         document.querySelector('#img-target').src = ev.target.src;
+    }));
+
+    const btnsSetDefault = document.querySelectorAll('.btn-set-default');
+    [...btnsSetDefault].forEach(el => el.addEventListener('click', () => {
+        document.querySelector('#img-selected-default').src = el.dataset.imgSrc;
+        const form = document.querySelector('#form-set-image-default');
+        form.querySelector('#fileName').value = el.dataset.imgName;
+        form.querySelector('#lotId').value = el.dataset.lotId;
     }));
 </script>
 {{/if}}
